--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
 		"composer/installers": "*",
 		"symfony/symfony1": "1.4",
 		"twig/twig": "1.15.*@dev",
-		"propel/sf-propel-o-r-m-plugin": "1.5.*@dev",
         "henrikbjorn/sf-twig-plugin": "dev-master",
-        "phast/sf-phast-plugin": "dev-master",
+		"propel/sf-propel-o-r-m-plugin": "1.5.*@dev",
+        "phast/sf-phast-plugin": "dev-master"
     }
 }
