--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,6 @@
 		"twig/twig": "1.15.*@dev",
         "henrikbjorn/sf-twig-plugin": "dev-master",
 		"propel/sf-propel-o-r-m-plugin": "1.5.*@dev",
-        "phast/sf-phast-plugin": "dev-master"
+        "phast/sf-phast-plugin": "0.1.*@dev"
     }
 }
