--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
 		"symfony/symfony1": "1.4",
 		"twig/twig": "1.15.*@dev",
 		"propel/sf-propel-o-r-m-plugin": "1.5.*@dev",
-        "phast/sf-phast-plugin": "0.1.*@dev"
+        "phast/sf-phast-plugin": "dev-master"
     }
 }
