--- a/config/propel.ini
+++ b/config/propel.ini
@@ -3,10 +3,10 @@ propel.packageObjectModel  = true
 propel.project             = web
 propel.database            = mysql
 propel.database.driver     = mysql
-propel.database.url        = mysql:dbname=web;host=localhost
+propel.database.url        = mysql:dbname=project;host=localhost
 propel.database.creole.url = ${propel.database.url}
 propel.database.user       = root
-propel.database.password   = 
+propel.database.password   =
 propel.database.encoding   = utf8
 
 ; mysql options
