--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,8 @@
 		"composer/installers": "*",
 		"symfony/symfony1": "1.4",
 		"symfony/sfImageTransformPlugin": "1.4",
+        "symfony/expression-language": "~2.6@dev",
+        "mtdowling/cron-expression": "dev-master",
 		"twig/twig": "1.15.*@dev",
 		"propel/sf-propel-o-r-m-plugin": "1.5.*@dev",
         "phast/sf-phast-plugin": "dev-master"
