--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-util": "^3.0.1",
     "gulp.spritesmith": "^1.4.0",
     "main-bower-files": "~2.4",
+    "merge-stream": "^0.1.7",
     "run-sequence": "^1.0.1",
     "nib": "~1.1.0",
     "through": "^2.3.6"
