--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "gulp-csso": "~0.1.7",
     "gulp-imagemin": "~0.1.4",
     "gulp-jade": "^0.10.0",
+    "gulp-merge": "^0.1.0",
     "gulp-stylus": "2.0.0",
     "gulp-twig": "0.0.4",
     "gulp-uglify": "~0.1.0",
     "gulp-util": "^3.0.1",
     "gulp.spritesmith": "^1.4.0",
     "main-bower-files": "~2.4",
-    "merge-stream": "^0.1.7",
-    "run-sequence": "^1.0.1",
     "nib": "~1.1.0",
+    "run-sequence": "^1.0.1",
+    "stylus-phast": "~0",
     "through": "^2.3.6"
   }
 }
